--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script>
+			var config = {
+			    "mastodon-domain": "",
+                "mastodon-token": "",
+                "mastodon-secret": "",
+                "mastodon-user-token": ""
+            };
+            var MastodonAPI = {
+
+            };
+		</script>
 	</head>
 	<body>
 	</body>
