--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html>
 	<head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="eventsource.js"></script>
         <script>
-			var config = {
-			    "mastodon-domain": "",
-                "mastodon-token": "",
-                "mastodon-secret": "",
-                "mastodon-user-token": ""
-            };
-            var MastodonAPI = {
 
-            };
+            var api = new MastodonAPI({
+                instance: "https://pleasehug.me"
+			});
 		</script>
 	</head>
 	<body>
