--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 	<head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="eventsource.js"></script>
+        <script src="mastodon.js"></script>
         <script>
 
             var api = new MastodonAPI({
-                instance: "https://pleasehug.me"
+                instance: "https://pleasehug.me",
+                api_user_token: "e1a45173d90a40198a908576d7d7e0ab568f4828918be583b8973b62c918344f"
 			});
 		</script>
 	</head>
