--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
             var api = new MastodonAPI({
                 instance: "https://pleasehug.me",
-                api_user_token: "e1a45173d90a40198a908576d7d7e0ab568f4828918be583b8973b62c918344f"
+                api_user_token: ""
 			});
 		</script>
 	</head>
