--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script>
             // initialize library
             // api_user_token has not to be set at this point if you don't have one yet
+            // NOTE: It needs jQuery!
             var api = new MastodonAPI({
                 instance: "https://pleasehug.me",
                 api_user_token: ""
