Add link to mastodon api docs

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
             //
             // BASIC REST FUNCTIONS
+            // you can use every api endpoint from https://github.com/tootsuite/documentation/blob/master/Using-the-API/API.md
             //
 
             api.post("statuses", {status:"i like pineapple on pizza"}, function (data) {
